--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="beef9d">  <td>19/08/27 16:43:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0003_login_With_Empirix_Business_Analyst.applicationLaunch()[pri:0, instance:VW_TC.TC0003_login_With_Empirix_Business_Analyst@55141def]">&gt;&gt;applicationLaunch</td> 
+<tr bgcolor="beef9d">  <td>19/10/05 02:30:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@55141def]">&gt;&gt;applicationLaunch</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/08/27 16:44:01</td>   <td>18800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0003_login_With_Empirix_Business_Analyst.logInWithExpirixBusinessAnalyst()[pri:1, instance:VW_TC.TC0003_login_With_Empirix_Business_Analyst@55141def]">logInWithExpirixBusinessAnalyst</td> 
+<tr bgcolor="beef9d">  <td>19/10/05 02:31:18</td>   <td>24681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@55141def]">logInWithExpirixAdmin</td> 
   <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/08/27 16:44:14</td>   <td>31839</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0003_login_With_Empirix_Business_Analyst.scriptTabValidation()[pri:9, instance:VW_TC.TC0003_login_With_Empirix_Business_Analyst@55141def]">scriptTabValidation</td> 
+<tr bgcolor="beef9d">  <td>19/10/05 02:31:37</td>   <td>44180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.scriptTabValidation()[pri:9, instance:VW_TC.TC0000_Debug_Testing@55141def]">scriptTabValidation</td> 
   <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/08/27 16:54:19</td>   <td>636772</td> <td>&nbsp;</td><td title="&lt;&lt;TC0003_login_With_Empirix_Business_Analyst.applicationClose()[pri:0, instance:VW_TC.TC0003_login_With_Empirix_Business_Analyst@55141def]">&lt;&lt;applicationClose</td> 
+<tr bgcolor="beef9d">  <td>19/10/05 02:32:58</td>   <td>125092</td> <td>&nbsp;</td><td title="&lt;&lt;TC0000_Debug_Testing.applicationClose()[pri:0, instance:VW_TC.TC0000_Debug_Testing@55141def]">&lt;&lt;applicationClose</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@757004314</td>   <td></td> </tr>
 </table>
