--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>scriptTabValidation</td>
+<td>hammerTabValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
