--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="beef9d">  <td>19/10/05 21:54:25</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC0000_Debug_Testing.applicationClose()[pri:0, instance:VW_TC.TC0000_Debug_Testing@55141def]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/10/05 21:52:33</td>   <td>-112505</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@55141def]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/10/05 21:53:21</td>   <td>-63595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.hammerTabValidation()[pri:11, instance:VW_TC.TC0000_Debug_Testing@55141def]">hammerTabValidation</td> 
-  <td>main@757004314</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/10/05 21:52:58</td>   <td>-87113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@55141def]">logInWithExpirixAdmin</td> 
-  <td>main@757004314</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.TabAvailabilityValidation()[pri:4, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">TabAvailabilityValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:08</td>   <td>3553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.alertTabValidation()[pri:6, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">alertTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:52:35</td>   <td>569989</td> <td>&nbsp;</td><td title="&lt;&lt;TC0002_login_With_Exmpirix_Admin.applicationClose()[pri:0, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">&lt;&lt;applicationClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:42:26</td>   <td>-39087</td> <td>&nbsp;</td><td title="&gt;&gt;TC0002_login_With_Exmpirix_Admin.applicationLaunch()[pri:0, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:06</td>   <td>1152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.dashBoardTabValidation()[pri:5, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">dashBoardTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:05</td>   <td>-213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">footerMandatoryDetails</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:52:01</td>   <td>536296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.hammerTabValidation()[pri:11, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">hammerTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:04</td>   <td>-561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">headerMandatoryDetails</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:42:50</td>   <td>-15249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">logInWithExpirixAdmin</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:24</td>   <td>19538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.scriptTabValidation()[pri:9, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">scriptTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:13</td>   <td>8487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.tagTabValidation()[pri:8, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">tagTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:43:10</td>   <td>5289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.testTabValidation()[pri:7, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">testTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>19/10/06 19:48:30</td>   <td>325153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0002_login_With_Exmpirix_Admin.variableTabValidation()[pri:10, instance:VW_TC.TC0002_login_With_Exmpirix_Admin@55182842]">variableTabValidation</td> 
+  <td>main@1279271200</td>   <td></td> </tr>
 </table>
