--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d8ba68">  <td>19/10/08 03:36:41</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC0001_login_Page_Verification.applicationClose()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@3270d194]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@52908367</td>   <td></td> </tr>
-<tr bgcolor="d8ba68">  <td>19/10/08 03:36:21</td>   <td>-20311</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@3270d194]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@52908367</td>   <td></td> </tr>
-<tr bgcolor="d8ba68">  <td>19/10/08 03:36:41</td>   <td>-505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@3270d194]">logInScreenVerification</td> 
-  <td>main@52908367</td>   <td></td> </tr>
+<tr bgcolor="d8ba68">  <td>19/10/08 12:08:42</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TC0000_Debug_Testing.applicationClose()[pri:0, instance:VW_TC.TC0000_Debug_Testing@3270d194]">&lt;&lt;applicationClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@359922172</td>   <td></td> </tr>
+<tr bgcolor="bc82a1">  <td>19/10/08 12:14:06</td>   <td>323567</td> <td>&nbsp;</td><td title="&lt;&lt;TC0000_Debug_Testing1.applicationClose()[pri:0, instance:VW_TC.TC0000_Debug_Testing1@5bf0d49]">&lt;&lt;applicationClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@359922172</td>   <td></td> </tr>
+<tr bgcolor="d8ba68">  <td>19/10/08 12:06:17</td>   <td>-144980</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@3270d194]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@359922172</td>   <td></td> </tr>
+<tr bgcolor="bc82a1">  <td>19/10/08 12:08:42</td>   <td>161</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing1.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing1@5bf0d49]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@359922172</td>   <td></td> </tr>
+<tr bgcolor="d8ba68">  <td>19/10/08 12:06:43</td>   <td>-118903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@3270d194]">logInWithExpirixAdmin</td> 
+  <td>main@359922172</td>   <td></td> </tr>
+<tr bgcolor="bc82a1">  <td>19/10/08 12:09:03</td>   <td>20599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing1.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing1@5bf0d49]">logInWithExpirixAdmin</td> 
+  <td>main@359922172</td>   <td></td> </tr>
+<tr bgcolor="d8ba68">  <td>19/10/08 12:07:15</td>   <td>-87179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.scriptTabValidation()[pri:9, instance:VW_TC.TC0000_Debug_Testing@3270d194]">scriptTabValidation</td> 
+  <td>main@359922172</td>   <td></td> </tr>
+<tr bgcolor="bc82a1">  <td>19/10/08 12:09:27</td>   <td>44484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing1.scriptTabValidation()[pri:9, instance:VW_TC.TC0000_Debug_Testing1@5bf0d49]">scriptTabValidation</td> 
+  <td>main@359922172</td>   <td></td> </tr>
 </table>
