--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c6f277">  <td>19/10/17 23:31:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@59474f18]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@231756373</td>   <td></td> </tr>
-<tr bgcolor="c6f277">  <td>19/10/17 23:31:49</td>   <td>27277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@59474f18]">logInWithExpirixAdmin</td> 
-  <td>main@231756373</td>   <td></td> </tr>
-<tr bgcolor="c6f277">  <td>19/10/17 23:33:30</td>   <td>127858</td> <td>&nbsp;</td><td title="&lt;&lt;TC0000_Debug_Testing.applicationClose()[pri:0, instance:VW_TC.TC0000_Debug_Testing@59474f18]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@231756373</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:26:50</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">logInWithExpirixAdmin</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">headerMandatoryDetails</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">footerMandatoryDetails</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.TabAvailabilityValidation()[pri:4, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">TabAvailabilityValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.dashBoardTabValidation()[pri:5, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">dashBoardTabValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.alertTabValidation()[pri:6, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">alertTabValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.testTabValidation()[pri:7, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">testTabValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.tagTabValidation()[pri:8, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">tagTabValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.scriptTabValidation()[pri:9, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">scriptTabValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.variableTabValidation()[pri:10, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">variableTabValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
+<tr bgcolor="c6f277">  <td>19/10/22 22:27:00</td>   <td>10240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.hammerTabValidation()[pri:11, instance:VW_TC.TC0000_Debug_Testing@65fb9ffc]">hammerTabValidation</td> 
+  <td>main@1786294176</td>   <td></td> </tr>
 </table>
