--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>scriptTabValidation</td>
+<td>headerMandatoryDetails</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>footerMandatoryDetails</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
