--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>19/10/20 02:48:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@4802796d]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153447573</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/20 02:49:17</td>   <td>21965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@4802796d]">logInWithExpirixAdmin</td> 
-  <td>main@1153447573</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/20 02:49:41</td>   <td>46011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.scriptTabValidation()[pri:9, instance:VW_TC.TC0000_Debug_Testing@4802796d]">scriptTabValidation</td> 
-  <td>main@1153447573</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/20 02:50:35</td>   <td>99659</td> <td>&nbsp;</td><td title="&lt;&lt;TC0000_Debug_Testing.applicationClose()[pri:0, instance:VW_TC.TC0000_Debug_Testing@4802796d]">&lt;&lt;applicationClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1153447573</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@3270d194]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@52908367</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@3270d194]">logInWithExpirixAdmin</td> 
+  <td>main@52908367</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0000_Debug_Testing@3270d194]">headerMandatoryDetails</td> 
+  <td>main@52908367</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0000_Debug_Testing@3270d194]">footerMandatoryDetails</td> 
+  <td>main@52908367</td>   <td></td> </tr>
 </table>
