Fix bug test data1

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0000_Debug_Testing.applicationLaunch()[pri:0, instance:VW_TC.TC0000_Debug_Testing@3270d194]">&gt;&gt;applicationLaunch</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@52908367</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0000_Debug_Testing@3270d194]">footerMandatoryDetails</td> 
-  <td>main@52908367</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0000_Debug_Testing@3270d194]">headerMandatoryDetails</td> 
-  <td>main@52908367</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/25 14:30:44</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0000_Debug_Testing.logInWithExpirixAdmin()[pri:1, instance:VW_TC.TC0000_Debug_Testing@3270d194]">logInWithExpirixAdmin</td> 
-  <td>main@52908367</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:30:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.TabValidation()[pri:4, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">TabValidation</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:36:02</td>   <td>308493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.alertTabValidation()[pri:6, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">alertTabValidation</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:37:04</td>   <td>370448</td> <td>&nbsp;</td><td title="&lt;&lt;TC0011_login_With_Client_OR_Partner_Client_User.applicationClose()[pri:0, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">&lt;&lt;applicationClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:30:18</td>   <td>-34942</td> <td>&nbsp;</td><td title="&gt;&gt;TC0011_login_With_Client_OR_Partner_Client_User.applicationLaunch()[pri:0, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">&gt;&gt;applicationLaunch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:35:54</td>   <td>300702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.dashBoardTabValidation()[pri:5, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">dashBoardTabValidation</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:30:53</td>   <td>-438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.footerMandatoryDetails()[pri:3, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">footerMandatoryDetails</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:30:52</td>   <td>-1013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.headerMandatoryDetails()[pri:2, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">headerMandatoryDetails</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:30:39</td>   <td>-13987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.logInWithPartnerClient_User()[pri:1, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">logInWithPartnerClient_User</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:36:11</td>   <td>317877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.testTabValidation()[pri:7, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">testTabValidation</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/27 01:36:20</td>   <td>326718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0011_login_With_Client_OR_Partner_Client_User.variableTabValidation()[pri:8, instance:VW_TC.TC0011_login_With_Client_OR_Partner_Client_User@6771beb3]">variableTabValidation</td> 
+  <td>main@2009221452</td>   <td></td> </tr>
 </table>
