--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>19/10/28 19:06:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">&gt;&gt;applicationLaunch</td> 
+<tr bgcolor="687592">  <td>19/10/28 19:44:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TC0001_login_Page_Verification.applicationLaunch()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">&gt;&gt;applicationLaunch</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@945591847</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/10/28 19:06:31</td>   <td>574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">logInScreenVerification</td> 
+<tr bgcolor="687592">  <td>19/10/28 19:44:32</td>   <td>20733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC0001_login_Page_Verification.logInScreenVerification()[pri:1, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">logInScreenVerification</td> 
   <td>main@945591847</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/10/28 19:44:40</td>   <td>28679</td> <td>&nbsp;</td><td title="&lt;&lt;TC0001_login_Page_Verification.applicationClose()[pri:0, instance:VW_TC.TC0001_login_Page_Verification@33d512c1]">&lt;&lt;applicationClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@945591847</td>   <td></td> </tr>
 </table>
